examples/c/error-codes/violates-constraint/fatal/CV-TES2-bad-static.output
CV-TES2-bad-static.c:7:17: error: invalid application of 'sizeof' to an incomplete type 'struct a'
  size_t size = sizeof(struct a);
                ^     ~~~~~~~~~~
CV-TES2-bad-static.c:4:8: note: forward declaration of 'struct a'
struct a;
       ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
